--- a/index.html
+++ b/index.html
@@ -3,11 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <style></style>
-    <LINK href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Hello</title>
+    <style>
+        div {
+            max-width: 800px;
+            margin: auto;
+
+        }
+    p{
+        text-align: justify;
+    }</style>
 </head>
 <body>
-Hello World!
+<div>
+    <h2>Hello World !</h2>
+
+    <p >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque maximus egestas justo id dictum. Donec eu
+        ante tincidunt, viverra ex id, fermentum lorem. Quisque scelerisque scelerisque luctus. Integer volutpat
+        tincidunt odio mattis vehicula. Nunc scelerisque nunc commodo diam rutrum, vulputate condimentum mi vestibulum.
+        Suspendisse id ligula vitae enim aliquam condimentum. Phasellus vulputate leo at iaculis fermentum. Phasellus et
+        aliquam libero. Maecenas urna eros, mollis sit amet elit et, sollicitudin gravida est. Nunc mattis ultrices
+        neque vel gravida. Donec ultrices ex enim, eget luctus dui condimentum eu. Fusce in nibh id diam tristique
+        blandit fringilla sed felis. Quisque eu metus sem. Maecenas lacinia varius augue, et dapibus erat facilisis
+        quis. Nunc malesuada dui eget urna mollis pulvinar. Cras sit amet quam ac ante tempus pellentesque ut nec
+        lectus.
+        <img style="float: left;margin: 20px;" src="images/polarbear.jpg" alt="polar bear" width="500px" srcset="">
+        Maecenas sit amet facilisis nunc, a efficitur felis. Sed sed metus fermentum, scelerisque libero eget, vehicula
+        urna. Fusce elementum mauris nibh, ac ullamcorper tortor pulvinar eu. Integer diam tellus, sollicitudin eu
+        sodales sit amet, mollis vel sem. Integer eu malesuada mi, non tristique nisl. Nunc tempus, lectus semper
+        tincidunt fringilla, nisl eros tincidunt odio, ut interdum elit massa vel magna. Suspendisse vel cursus nunc.
+        Curabitur dictum hendrerit venenatis. Curabitur nunc nulla, gravida ac odio ac, tempor auctor risus. Morbi
+        maximus orci feugiat diam dignissim sagittis.
+
+
+        Maecenas eu urna dolor. Nulla ut tortor sed est rutrum aliquam. Mauris nulla quam, luctus tincidunt varius vel,
+        hendrerit a ante. Etiam vitae feugiat nibh, nec iaculis dui. Ut ipsum nibh, blandit in semper non, mattis non
+        mauris. Donec eget ultrices eros, a congue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+        Sed dictum ipsum sem, vel semper ex imperdiet at. Quisque lectus nibh, ultrices sit amet suscipit eu, vulputate
+        varius mauris. Sed faucibus aliquam tincidunt. In malesuada justo quis purus viverra egestas. Nullam mauris
+        erat, interdum id turpis nec, ultricies consequat elit. Curabitur interdum, est id feugiat interdum, enim nisl
+        efficitur est, a rutrum metus lectus et turpis. Phasellus sed diam in orci imperdiet dignissim vel ut erat.
+        Nulla fringilla mattis nulla. Cras aliquam diam velit, eu auctor neque placerat et. Pellentesque posuere risus
+        sit amet felis pellentesque finibus. In dignissim ex cursus lectus cursus, vitae ornare erat finibus.
+
+        In semper tempus elementum. Ut sagittis vulputate nibh, quis malesuada tortor. Curabitur facilisis scelerisque
+        nibh, ac feugiat elit. Quisque auctor justo vel quam convallis rhoncus quis non ipsum. Donec placerat velit vel
+        turpis tincidunt rutrum. Nullam tempor, nisl vitae cursus feugiat, purus nulla condimentum metus, ut mattis
+        dolor urna eu ex. Phasellus ut sem vel magna malesuada facilisis. Fusce rutrum mauris in sem vestibulum, eget
+        maximus eros vehicula.
+
+    </p>
+
+</div>
 </body>
 </html>
